update download data & motto data

--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
-<!DOCTYPE html><html><head><meta charset=utf-8>
-<link rel="shortcut icon" type=image/x-icon href=./favicon.ico rel="external nofollow">
-<meta name=viewport content="width=device-width,initial-scale=1"><title>第一产业影音交流协会</title>
-<link href=/static/css/app.e44b2a6148e619d4e8e8e39effc954d6.css rel=stylesheet>
-</head><body>
-<div id=app></div>
-<script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script>
-<script type=text/javascript src=/static/js/vendor.e5d1e946e4f762cf0ff7.js></script>
-<script type=text/javascript src=/static/js/app.51ad949c7fbd5524edf9.js></script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135018479-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-135018479-1');
-</script>
-</body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" rel="external nofollow" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>第一产业影音交流协会</title>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135018479-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	  gtag('config', 'UA-135018479-1');
+	</script>
+  </head>
+  <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
+</html>
