--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style=filter:grayscale(1);">
+<html style="filter:grayscale(1);">
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" rel="external nofollow" />
