--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" rel="external nofollow" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>第一产业影音交流协会</title>
