--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" rel="external nofollow" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="theme-color" content="#484dff">
     <title>第一产业影音交流协会</title>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135018479-1"></script>
 	<script>
